// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion sample snapshot testing Disabled 1`] = `
<div>
  <div
    class="makeStyles-accordionContainer-57"
  >
    <div
      class="HvAccordion-root-58"
      id="disabled-item1"
    >
      <h3
        class="HvTypography-root-64 HvTypography-normalText-77"
      >
        <div
          aria-disabled="true"
          aria-expanded="false"
          class="HvAccordion-label-62 HvAccordion-disabled-63 HvTypography-root-64 HvTypography-highlightText-76"
          id="disabled-item1-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-86 HvIconBase-xs-87"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#999999"
              />
            </svg>
          </div>
          Analytics
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item1-button"
        class="HvAccordion-container-60 HvAccordion-hidden-61"
        id="disabled-item1-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-56 HvListContainer-root-91"
        >
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="0"
          >
            Views
          </li>
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="-1"
          >
            Parameters
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root-58"
      id="disabled-item2"
    >
      <h3
        class="HvTypography-root-64 HvTypography-normalText-77"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label-62 HvTypography-root-64 HvTypography-highlightText-76"
          id="disabled-item2-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-86 HvIconBase-xs-87"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          System
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item2-button"
        class="HvAccordion-container-60 HvAccordion-hidden-61"
        id="disabled-item2-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-56 HvListContainer-root-91"
        >
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="0"
          >
            Settings
          </li>
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="-1"
          >
            Network
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root-58"
      id="disabled-item3"
    >
      <h3
        class="HvTypography-root-64 HvTypography-normalText-77"
      >
        <div
          aria-disabled="true"
          aria-expanded="false"
          class="HvAccordion-label-62 HvAccordion-disabled-63 HvTypography-root-64 HvTypography-highlightText-76"
          id="disabled-item3-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-86 HvIconBase-xs-87"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#999999"
              />
            </svg>
          </div>
          Data
        </div>
      </h3>
      <div
        aria-labelledby="disabled-item3-button"
        class="HvAccordion-container-60 HvAccordion-hidden-61"
        id="disabled-item3-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-56 HvListContainer-root-91"
        >
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="0"
          >
            Storage
          </li>
          <li
            class="HvListItem-root-92 HvListItem-gutters-93 HvListItem-condensed-97 HvListItem-interactive-94 HvFocus-root-103 HvFocus-focusDisabled-106"
            tabindex="-1"
          >
            Memory
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion sample snapshot testing Main 1`] = `
<div>
  <div
    class="makeStyles-accordionContainer-2"
  >
    <div
      class="HvAccordion-root-3"
      id="item1"
    >
      <h3
        class="HvTypography-root-9 HvTypography-normalText-22"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label-7 HvTypography-root-9 HvTypography-highlightText-21"
          id="item1-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-31 HvIconBase-xs-32"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          Analytics
        </div>
      </h3>
      <div
        aria-labelledby="item1-button"
        class="HvAccordion-container-5 HvAccordion-hidden-6"
        id="item1-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root-36"
        >
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="0"
          >
            Views
          </li>
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="-1"
          >
            Parameters
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root-3"
      id="item2"
    >
      <h3
        class="HvTypography-root-9 HvTypography-normalText-22"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label-7 HvTypography-root-9 HvTypography-highlightText-21"
          id="item2-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-31 HvIconBase-xs-32"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          System
        </div>
      </h3>
      <div
        aria-labelledby="item2-button"
        class="HvAccordion-container-5 HvAccordion-hidden-6"
        id="item2-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root-36"
        >
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="0"
          >
            Settings
          </li>
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="-1"
          >
            Network
          </li>
        </ul>
      </div>
    </div>
    <div
      class="HvAccordion-root-3"
      id="item3"
    >
      <h3
        class="HvTypography-root-9 HvTypography-normalText-22"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="HvAccordion-label-7 HvTypography-root-9 HvTypography-highlightText-21"
          id="item3-button"
          role="button"
          tabindex="0"
        >
          <div
            class="HvIconBase-root-31 HvIconBase-xs-32"
            name="DropDownXS"
          >
            <svg
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                fill="#414141"
              />
            </svg>
          </div>
          Data
        </div>
      </h3>
      <div
        aria-labelledby="item3-button"
        class="HvAccordion-container-5 HvAccordion-hidden-6"
        id="item3-container"
        role="region"
      >
        <ul
          class="makeStyles-accordionSpacing-1 HvListContainer-root-36"
        >
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="0"
          >
            Storage
          </li>
          <li
            class="HvListItem-root-37 HvListItem-gutters-38 HvListItem-condensed-42 HvListItem-interactive-39 HvFocus-root-48 HvFocus-focusDisabled-51"
            tabindex="-1"
          >
            Memory
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
